2016-12-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "nvti" is now in gvm-libs.

	* base/nvti.c, base/nvti.h: Removed.

	* COPYING: Removed the files respectively.

	* base/CMakeLists.txt: Removed handling of this module.

	* base/nvticache.h, misc/plugutils.h, nasl/nasl.c: Changed include
	to gvm/base/nvti.h.

2016-12-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (nasl_close_socket): Improve close() error logging.

2016-12-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_file" is now "fileutils" in gvm-libs.

	* base/openvas_file.c, base/openvas_file.h: Removed.

	* COPYING: Removed the files respectively.

	* base/CMakeLists.txt: Removed handling of this module.

	* misc/openvas_auth.c, nasl/nasl_grammar.y: Removed unneeded include
	of openvas/base/openvas_file.h

2016-12-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_connect): Disable checking of system
	known_hosts file.

2016-12-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt, misc/CMakeLists.txt, nasl/CMakeLists.txt,
	omp/CMakeLists.txt, osp/CMakeLists.txt: Consistently set hardening and
	optimization flags only in "Release" build type to avoid compiler
	optimization interfering with debugging in "Debug" build type.

2016-12-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Separate base/array, base/pidfile and base/cvss into the new module "gvm-libs".

	* CMakeLists.txt: Add LIBGVM_BASE as required. Removed OPENVAS_PID_DIR.

	* base/array.c, base/array.h, base/cvss.c, base/cvss.h, base/pidfile.c,
	base/pidfile.h: Removed.

	* base/CMakeLists.txt: Remove handling of "array", "cvss" and "pidfile".
	Removed OPENVAS_PID_DIR handling.

	* misc/openvas_auth.h: Remove unnecessary include of array.h.

	* base/openvas_networking.h, misc/openvas_auth.c, omp/omp.h:
	Adjust include for array.h.

	* COPYING: Removed the entries for the removed files.
