@@ -30,7 +30,6 @@ base/openvas_hosts.[c|h]: GPLv2+
 base/openvas_networking.[c|h]: GPLv2+
 base/openvas_string.[c|h]: GPLv2+
 base/pwpolicy.[c|h]: GPLv2+
-base/settings.[c|h]: GPLv2+
 base/kb.h: GPLv2+
 base/kb_redis.c: GPLv2+
 
