@@ -1,3 +1,15 @@
+2016-12-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Module "settings" is now in gvm-libs.
+
+	* base/settings.c, base/settings.h: Removed.
+
+	* COPYING: Removed the files respectively.
+
+	* base/CMakeLists.txt: Removed handling of this module.
+
+	* misc/prefs.c: Changed include to gvm/base/settings.h.
+
 2016-12-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Module "nvti" is now in gvm-libs.
